deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-k8s-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins-k8s-demo
  template:
    metadata:
      labels:
        app: jenkins-k8s-demo
    spec:
      containers:
      - name: jenkins-k8s-demo
        image: kiksmart/jenkins-k8s-demo:latest
        ports:
        - containerPort: 3000
