service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-k8s-demo-service
spec:
  selector:
    app: jenkins-k8s-demo
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
